<resources>
    <string name="app_name">GoVeggie</string>
    <string name="settings">Choose option</string>
    <string name="location">Location</string>
    <string name="card_image">Card image</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="rating_value">Rating</string>
    <string name="address">Address</string>
    <string name="opening_hours">Opening hours</string>
    <string name="icon_time">Icon time</string>
    <string name="icon_place">Icon place</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="voters_number_rating">Num</string>
    <string name="detai_general_info">Info about restaurant</string>
    <string name="title_activity_settings">Settings</string>
    <string name="open_map">Open map</string>
    <string name="favorites">Open favorites</string>
    <string name="favorites_activity">Favorites</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="sorted_by_vegetarian">Vegetarian</string>
    <string name="sorted_by_vegan">Vegan</string>
    <string name="option">Option</string>
    <string name="choose">Choose</string>
    <string name="location_icon">Location icon</string>
    <string name="location_permission">Location permission</string>
    <string name="location_saved">Location saved!</string>
    <string name="map">Map</string>
    <string name="opening_hours_open">Open</string>
    <string name="opening_hours_closed">Closed</string>
    <string name="rating_value_label">Rating</string>
    <string name="widget_image">Widget image</string>
    <string name="appwidget_text">Widget list</string>
    <string name="location_checkbox">Checkbox</string>
    <string name="lackof_favorite">No favorite to display</string>
    <string name="error_message_internet">Ensure you have internet access.</string>
    <string name="error_message_location">Please open settings and turn on location permission.</string>
    <string name="error_message_norestaurants">Sorry, no restaurant to display</string>
    <string name="api_key">AIzaSyCZyLiKgSRhoxdxHDiqpkeuiwwn6jcxzcY</string>

</resources>
