<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/widget_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_small"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/widget_icon"
            android:layout_width="@dimen/widget_image_size"
            android:layout_height="@dimen/widget_image_size"
            android:layout_gravity="center"
            android:contentDescription="@string/widget_image"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true">

            <TextView
                android:id="@+id/widget_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/widget_text"
                android:textStyle="bold"
                tools:text="@string/restaurant_name" />

            <TextView
                android:id="@+id/widget_restaurant_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:drawableStart="@drawable/ic_round_place_24px"
                android:textColor="@color/white"
                tools:text="@string/address" />

            <TextView
                android:id="@+id/widget_restaurant_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:drawableStart="@drawable/ic_round_schedule_24px"
                android:paddingBottom="@dimen/spacing_small"
                android:textColor="@color/white"
                tools:text="@string/opening_hours" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>