<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.katarzkubat.goveggie.ui.LocationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_appbar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/location_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:contentDescription="@string/location_icon"
        app:layout_constraintBottom_toBottomOf="@+id/location_permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_appbar"
        app:srcCompat="@drawable/ic_outline_my_location_24px" />

    <TextView
        android:id="@+id/location_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:text="@string/location_permission"
        android:textSize="@dimen/detail_text"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/settings_appbar" />

    <CheckBox
        android:id="@+id/location_permission_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        app:layout_constraintBottom_toBottomOf="@+id/location_permission"
        app:layout_constraintStart_toEndOf="@+id/location_permission"
        app:layout_constraintTop_toBottomOf="@+id/settings_appbar"
        android:contentDescription="@string/location_checkbox"/>

</android.support.constraint.ConstraintLayout>
